--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.1.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.3",
     "react-native-swiper": "^1.5.13",
