--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "apsl-react-native-button": "^3.1.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.3",
+    "react-native-storage": "^0.2.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
