--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apsl-react-native-button": "^3.1.0",
+    "lodash": "^4.17.5",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.3",
     "react-native-scrollable-tab-view": "^0.8.0",
