--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "apsl-react-native-button": "^3.1.0",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.3",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-storage": "^0.2.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
+    "react-native-video": "^2.0.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
