--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.5.0",
     "react-native-video": "^2.0.0",
+    "react-native-video-player": "^0.9.1",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
